[metadata]
name = tinboard
description = A Pinboard client for the terminal
version = attr: tinboard.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/tinboard
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = pinboard, terminal, bookmark
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/tinboard/blob/main/README.md
    Source = https://github.com/davep/tinboard
    # Issues = https://github.com/davep/tinboard/issues
    # Discussions = https://github.com/davep/tinboard/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.45.1
    aiopinboard>=2023.11.2
    xdg-base-dirs>=6.0.0
    pytz
    humanize>=4.8.0
python_requires = >=3.10,<3.12

[options.package_data]
tinboard = py.typed

[options.entry_points]
console_scripts =
    tinboard = tinboard.__main__:run

### setup.cfg ends here
